@@ -1,6 +1,7 @@
 == 2.3.3 ==
 
   * Fixed bug that made all fields declared with the @property tag static. ( issue #262 )
+  * Minor fix to better handle trailing slash on path to template (from jwmetrocat). (issue #237 )
 
 == 2.3.2 ==
 
@@ -8,7 +9,7 @@
 
 == 2.3.1 ==
 
- * Fixed HTML typo in allfiles template. (issue #228)
+ * Fixed HTML typo in allfiles template. ( issue #228 )
  * Modified template to display version information for classes.
  * Modified template to better support multiple methods with the same name.
  * Fixed bug that caused template to error when backtick characters appeared around class names.
